# CryptograFace

./: .gitignore  CMakeLists.txt  README.md  crypt.cpp  cryptography.cpp  decrypt.cpp  detect.cpp  encrypt.cpp  facial.cpp  main.cpp  run.sh  test.cpp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: CMakeCCompilerId.c.364A595F4FF6EA2E.idx  CMakeCCompilerId.c.59A7181F4E512D48.idx  CMakeCXXCompilerId.cpp.9682D9F0D9FC3ABD.idx  CMakeCXXCompilerId.cpp.A59336D6A9E575E6.idx  CryptograFace.config.273468A53B932388.idx  cryptography.cpp.8C6AAE1D2018B593.idx  decrypt.cpp.7495C65956E060F5.idx  detect.cpp.CBA994A65C80F0DF.idx  encrypt.cpp.214B7DA57A5E48DA.idx  facial.cpp.3A2A1F711DF48D14.idx  facialrecognision.h.7EC694C9F9BC6549.idx  test.cpp.A521065010D06063.idx
builds/: crypt  main
headers/: cryptography.h  directorywindow.h  facialrecognision.h  loginwindow.h  notepadwindow.h
python_scripts/: app.py  hand_gesture_canvas.py
python_scripts/model/keypoint_classifier/: keypoint_classifier.py
python_scripts/model/point_history_classifier/: point_history_classifier.py
source/: cryptography.cpp  deprecated.cpp  directorywindow.cpp  facialrecognision.cpp  globals.cpp  loginwindow.cpp  main.cpp  notepadwindow.cpp
ui/: loginwindow.ui  notepadwindow.ui
